--- a/pathama/1.pathamavipatti.md
+++ b/pathama/1.pathamavipatti.md
@@ -9,31 +9,32 @@
 >**<center>预习</center>**
 >- **ayaṃ ။** (876)လက်ထောက်၍ ပြရလောက်အောင် နိးကပ်သော(接近) သက်ရှိအထီး(生物+雄性的) အမ（雌性）နှင့် သက်မဲ့အရာဝတ္ထုကို(无生命的物质) ပြောသော ဧကဝုစ်ပါဠိ(单数)။
 >- **ime ။** အထီး(雄性)(အဖို(1122)阳性)ကို ပြောသော ဗဟုဝုစ်ပါဠိ(复数)။
->- **imā ။** အမ(雌性)ကို ပြောသော ဗဟုဝုစ်ပါဠိ(复数)။
->- **tvaṃ ။** မိမိ(自己)နှင့် အတူပြောနေသူကို ပြောသော ဧကဝုစ်ပါဠိ။
->- **tumhe ။** ဗဟုဝုစ်ပါဠိ [အထီး အမအားလုံကို သုံးနိုင်၏။](公的母的都可以用)
->- **ahaṃ ။** မိမိကို(自己) ပြောသော ဧကဝုစ်ပါဠိ။
->- **mayaṃ ။** မိမိတို့ကို ပြောသော ဗဟုဝုစ်ပါဠိ။
+>- **imā ။** 雌性表达的复数။
+>- **tvaṃ ။** မိမိ(自己)နှင့် အတူပြောနေသူကို ပြောသော ဧကဝုစ်ပါဠိ။？？？
+>- **tumhe ။** 复数 阳性阴性都可使用
+>- **ahaṃ ။** 表示自己的单数။
+>- **mayaṃ ။** 表示我们的复数။
 
 ## <center>(熟读))</center>
-**nāma**-မည်(称为)၏။ ကိံနာမော-အဘယ်အမည် ရှိသနည်း (你叫什么名字呢？)။ ကိံနာမာ-အဘယ်အမည် ရှိကုန်သနည်း(你们叫什么名字？)။ [“အမ”ဖြစ်လျှင်ကိံနာမာ-အဘယ်အမည်  ရှိသနည်း”  ဟု  ဧကဝုစ်လည်းသုံးစွဲနိုင်၏။(雌性的妳叫什么名字？) ] (သနည်း=书面语疑文句句尾,呢？)
+**nāma**-昵称။ kiṃnāmo-你叫什么名字呢？။ kiṃnāmā
+-你们叫什么名字？။ [“ 雌性 ” kiṃnāmā-妳叫什么名字呢？”  使用于单数။(雌性的妳叫什么名字？) ]
 
-မောင်ဝ + နာမ -မောင်ဝ + မည်၏။<br>သာမဏေရာ + နာမ -·သာမဏေတို့ + မည်၏။ [ကိုရင်တို့ မည်၏]
-小胖+nāma=小胖+昵称，称  sāmaṇerā+nāma=sāmaṇerā（们）+昵称，称
+小胖+nāma = 小胖+昵称，称  sāmaṇerā+nāma = sāmaṇerā（们）+昵称，称
 
 >**<center>预习</center>**
 >
->- **“nāma”** ဟုရှိရာ၌ အမြဲ( 经常) ဧကဝုစ်(单数) ပေးပါ(给) ၊ “သာမဏေရာ + နာမ - သာမဏေတို့+မည့်ကုန်၏”ဟု ဗဟုဝုစ် မပေးနှင့်(不用双数)။ (နှင့်=以，用)
->- **kinnāmā** -ဟု ရှိရာ၌ကား ဗဟုဝုစ် ပေးရသည်။ [ကိံ ကို “ ကိံ ” ဟုသာ ဖတ်ပါ读၊ “ ကိန် ” ဟု ဝိသဇ္ဇနီသံ မပါစေရ不加၊ အယံ၌လည်း “ အယမ်း ” ဟု ဝိသဇ္ဇနီသံမပါစေရ။不加],- 
->- **အနက်含义ပေးရာ၌**  ရိုးရိုး普通 နိဿယအတိုင်း按照nissaya ”အာဝုသော သာမဏေရ-ငါ့ရှင် သာမဏေ贤友，沙马内拉၊ အယံ ဒါရကော- ဤ ကလေးသည်这小孩၊ ကိံနာမော >- အဘယ်အမည် ရှိသနည်း叫什么名字” စသည်ဖြင့်等等 ပေးပါ။
->- **မြန်မာပြန်ရာ၌ကား翻译缅语** - မြန်မာစကားပြေ现代缅语解释 ရေးသလို写作 “ဤ  ကလေး အဘယ်အမည် ရှိနည်း这小孩叫什么名字” ဟု ပြန်ပါ翻译။
->- **စကားပြောရာ၌မူ说话的时候** “ဒီ ကလေး နာမည် ဘယ်လို ခေါ်သလဲ这小孩叫什么名字” ဟုပြန်ဆိုပါ翻译။[ဒါရိကာ-ကလေးမ(သူငယ်မ)小女孩သတို့သမီး女人။]
+>- **“nāma”** 有**nāma**的时候经常是单数 ၊ “ sāmaṇerā + nāma - sāmaṇerā（们）+ မည့်ကုန်၏？？？” 不会以复数以复数形式出现။
+>- **kinnāmā** - 有**kinnāmā။**的时候经常是复数 [၊ “ ကိန် ” ဟု ဝိသဇ္ဇနီသံ？？？ မပါစေရ不加၊ အယံ၌လည်း “ အယမ်း ” ဟု ဝိသဇ္ဇနီသံမပါစေရ။不加]？？？,- 
+>- **အနက်含义ပေးရာ၌** 平常按照**nissaya** ”āvuso sāmaṇera- 贤友，沙马内拉၊ ayaṃ dārako- 这小孩၊ kiṃnāmo >- 叫什么名字？” 等等给予的။
+>- **မြန်မာပြန်ရာ၌ကား翻译缅语** - 现代缅语解释 写作翻译为 “这小孩叫什么名字” ။
+>- **说话的时候**  翻译为 “这小孩叫什么名字” ။[**dārikā**-小女孩，女人။]
 
 ---
 
 ## <center>ပါဠိကို ကျ၍</center>
 **အနက်ပေး,မြန်မာပြန်ပါ**
-**၁။** āvuso sāmaṇera！. . . ayaṃ dāra‌ko kiṃnāmo။<br>**၂။** bhante ‌ buddharakkhita！. . . ayaṃ dārako (小胖)nāma။<br>**၃။** bhoti kaññe！. . . ayaṃ dārikā kiṃ nāmā။<br>**၄။** bho purisa！. . . ayaṃ dārikā (小胖妞)”nāma။<br>**၅။** bho dāraka！. . . thaṃ kiṃ nāmo။<br>**၆။** bho samaṇa！. . . ayaṃ (小洪) nāma။<br>**၇။** bhoti dārike！. . . thaṃ kiṃ nāmā။<br>**၈။**bho purisa！. . . ayaṃ (小英)nāma။<br>**၉။** bho sāmaṇera！. . . ayaṃ vihāro kiṃnāmo။<br>**၁၀။** bhonto samaṇā！. . . ayaṃ vihāro jetavanaṃ nāma။
 
->အာဝုသော,ဘော,ဘန္တေ,ဘောန္တော,ဘောတိ တို့သည် ခေါ်သောပြန်၍ထူးသောပုဒ်များတည်၊ ငယ်သူကို下座 ”အာဝုသော-ငါ့ရှင်,ငါ့ရှင်တို့贤友，贤友们” ဟုလည်းကောင်း该, ကြီးသူကို上座 “ဘန္တေ-အရှင်ဘုရား, အရှင်ဘုရားတို့尊者，尊者们 ” ဟု လည်းကောင်း该 သုံးစွဲပါ（使用、应用） ၊ အာဝုသော သာမဏေရ- ငါ့ရှင် သာမဏေ贤友沙马内拉၊ ဘန္တေ  ဗုဒ္ဓရက္ခိတ-အရှင်ဘုရားဗုဒ္ဓရက္ခိတ护佛尊者၊ ဘောန္တော သမဏာ-အို ရဟန်းတို့嘿比库们။
+**၁။** āvuso sāmaṇera！. . . ayaṃ dāra‌ko kiṃnāmo။ <br>**၂။** bhante ‌ buddharakkhita！. . . ayaṃ dārako (小胖)nāma။<br>**၃။** bhoti kaññe！. . . ayaṃ dārikā kiṃ nāmā။ <br> **၄။** bho purisa！. . . ayaṃ dārikā (小胖妞)”nāma။ <br>**၅။** bho dāraka！. . . thaṃ kiṃ nāmo။<br>**၆။** bho samaṇa！. . . ayaṃ (小洪) nāma။<br> **၇။** bhoti dārike！. . . thaṃ kiṃ nāmā။ <br> **၈။** bho purisa！. . . ayaṃ (小英)nāma။ <br>**၉။** bho sāmaṇera！. . . ayaṃ vihāro kiṃnāmo။ <br>**၁၀။** bhonto samaṇā！. . . ayaṃ vihāro jetavanaṃ nāma။
+
+>āvuso,bho,bhante,bhonto,bhoti 代词中 ခေါ်သောပြန်၍???（ထူးသောပုဒ်များတည်特殊词组）၊ 下座 “āvuso 贤友，贤友们 ” 如此,  上座 “bhante 尊者，尊者们 ” ဟု လည်းကောင်း？？？ သုံးစွဲပါ（使用、应用） ၊ āvuso sāmaṇera- 贤友沙马内拉၊ bhante  buddharakkhita -အရှင်ဘုရားဗုဒ္ဓရက္ခိတ？？？护佛尊者၊ bhonto samaṇā - 嘿沙门们။
 - **အမှာ။** ဤအချိန်မှာ这时候 သဒ္ဒါကျဉ်း၌လည်း语法缩短 နာမ်ပဒမာလာကို名词实词 သင်လျက်ရှိပါလိမ့်မည်၊ သာမဏေရော,ဗုဒ္ဓရက္ခိတော,ဒါရကော,သမဏောတို့ကို们 ပုရိသောကဲ့သို့လည်းကောင်း,ဇေတဝနံကို စိတ္တိကဲ့သို့လည်းကောင်း,ဒါရိကာကို ကညာကဲ့သို့လည်းကောင်း နာမ်ဂိုဏ်း？？？ကြည့်၍ရုပ်စဉ်ပါစေ။语法顺序？
