--- a/pathama/2.kulyata_lingata.md
+++ b/pathama/2.kulyata_lingata.md
@@ -3,11 +3,11 @@
 **<center>(ကျက်မှတ်ရန်)</center>**
 |  |  |  |  |
 | - | - | - | - |
-|၁။ **အယံ ကိံနာမော**။|။ **အယံ ဗုဒ္ဓရက္ခိတော နာမ**။|၂။ **ဣမေ ကိံနာမော**။|။ **ဣမေ သာမဏေရာ နာမ**။|
-|၃။ **တွံ ကိံနာမော**။|။ **အဟံမောင်ဝနာမ**။|၄။ **တုမှေ ကိံနာမ**။|။ **မယံ သမဏာနာမ**။|
+|**၁။** ayaṃ kiṃnāmo။|။ ayaṃ buddharakkhito nāma။|**၂။** ime kiṃnāmo။|။ ime sāmaṇerā nāma။|
+|**၃။** tvaṃ kiṃnāmo။|။ ahaṃ 小胖 nāma။|**၄။** tumhe kiṃnāma။|။ mayaṃ samaṇā nāma။|
 
 ---
-**<center>ကြည့်ရှုရန်</center>**
-ကြိယာမပါသော ဝါကျများ၌ “အယံနှင့် ဗုဒ္ဓရက္ခိတော နာမ” ကဲ့သို့ ၂ ပုဒ်ကို တူသော အနက်ရှိသောကြောင့် “တုလျတ္ထ=တုလျတ်”ဟု လည်းကောင်း, လိန် အနက်ချည်းသာ ရှိသောကြောင့် ”လိင်္ဂတ္ထ=လိင်္ဂတ်” ဟု လည်းကောင်း ခေါ်သည်။
-- **[ဆောင်]။** ကြိယာမသတ်, တုလျတ်, လိင်္ဂတ် မြဲမှတ်ပါ။ 
-- **သင်နည်း။** ကိံ ပါသော ဝါကျတို့သည် အမေးဝါကျ၊ အယံ ဗုဒ္ဓရက္ခိတော နာမ-စသော တွဲဖက်ဝါကျတို့ဘည် အဖြေဝါကျ၊ တပည့်များကို ၂ စုခွဲထားပြီးလျှင် အမေးဝါကျကို တစ်စုအား အဆိုခိုင်း၍, အဖြေဝါကျကို အခြား တစ်ခုအား အဆိုခိုင်းပါ၊ မေးတိုင်း ဖြေတိုင်း လက်ညှိုးထိုး၍, အဟံ ဟု ဆိုလျှင် မိမိကို လက်ညှိုးညွှန်၍ ဆိုပါစေ။
+**<center>预习</center>**
+句子中动词的谓语不包括 “ ayaṃ和 buddharakkhito nāma ” 置名词后 两个词组 တူသော？？？ （အနက်意思）ရှိ（သောကြောင့်982）
+- **[背]။** ကြိယာမသတ်, တုလျတ်, လိင်္ဂတ် မြဲမှတ်ပါ။ ？？？
+- **学习方法။** 句子中有**kiṃ**的问句 ၊ ayaṃ buddharakkhito nāma-စသော？？？ တွဲဖက်ဝါကျတို့ဘည်？？？ အ答句၊ 学生们 ၂ （စု集中）（ခွဲထား148）完成 问句 တစ်စုအား？？？ အဆိုခိုင်း၍？？？, 问句 其他 တစ်ခုအား အဆိုခိုင်းပါ၊ 每当提问 或 回答  လက်ညှိုးထိုး၍指 ပြပါစေ展示၊ 例子- tvaṃ   说到 他 指, ahaṃ  说道 自己 指 读吧။
