--- a/pathama/3.katta_va_kyiya.md
+++ b/pathama/3.katta_va_kyiya.md
@@ -5,12 +5,12 @@
 **ဝိဘတ်။** <br>
 |  |  |  |  |  |  |  |  
 | - | - | - | - | - | - | - |
-|**တိ, အန္တိ**။|**သိ, ထ**။|**မိ, မ**။|**အယံ ဘဝတိ**။|**ဣမေ ဘဝန္တိ**။|
-|**တွံ ဘဝသိ**။|**တုမှေ ဘဝထ**။|**အဟံ ဘဝါမိ**။|**မယံ ဘဝါမ**။|
->**[ဆောင်]** အစ ၂ သွယ်, သူတွက်ချယ်၊ အလက် ၂ လုံး, သင့်တွက် သုံး ၊ အဆုံး ၂ ချက်, ငါ့ အတွက် ၃ချက် နားလည်းစေ။
+|**ti, anti**။|**si, tha**။|**mi,ma **။|**ayaṃ bhavati**။|**ime bhavanti**။|
+|**thaṃ bhavasi**။|**tumhe bhavatha**။|**ahaṃ bhavāmi**။|**mayaṃ bhavāma**။|
+>**[ဆောင်]** အစ ၂ သွယ်, သူတွက်ချယ်၊ အလက် ၂ လုံး, သင့်တွက် သုံး ၊ အဆုံး ၂ ချက်, ငါ့ အတွက် ၃ချက် နားလည်စေ။
 
 **<center>ကြည့်ရှုရန်</center>**
-- တိနှင့် အန္တိဟူသော အစဝိဘတ် ၂ သွက်ကို သူများအတွက် သုံးစွဲရ၏၊ သိနှင့် ထဟူသော အလယ် ၂လုံကို သင်, နင် , မင်း, ခင်ဗျား, အရှင်ဘုရားတို့အတွက် သုံးစွဲး၏ ၊မိနှင့်(မ) ဟူသော အဆုံး ၂ လုံးကို ငါ, ကျွန်ုပ်, ကျွန်တော်, တပည့်တော်, ကျွန်မ (ကျမတို့)အတွက် သုံးစွဲရဘည်း။
+- တိနှင့် အန္တိဟူသော အစဝိဘတ် ၂ သွက်ကို သူများအတွက် သုံးစွဲရ၏၊ သိနှင့် ထဟူသော အလယ် ၂လုံကို သင်, နင် , မင်း, ခင်ဗျား, အရှင်ဘုရားတို့အတွက် သုံးစွဲး၏ ၊မိနှင့်(မ) ဟူသော အဆုံး ၂ လုံးကို ငါ, ကျွန်ုပ်, ကျွန်တော်, တပည့်တော်, ကျွန်မ (ကျမတို့)အတွက် သုံးစွဲရသည်။
 - အယံ, ဣမေ, တွံ, တုမှေ, အဟံ, မယံ တို့ကို **‘’ကတ္တား”** ဟု ခေါ်၏ ၊ဘဝတိ, ဘဝန္တိ-စသော ပုဒ်တို့ကို **“ကြိယာ”** ဟု ခေါ်၏၊ ထိုကတ္တားနှင့် ကြိယာ ပေါင်းထားသော (တစ်ရံတစ်ခါ ကြိယာမပါသော) စကားတစ်ရပ်ကို **“ဝါကျ”** ဟုခေါ်သည်။
 
 
@@ -20,12 +20,12 @@
 
 ---
 **<center>ကြည့်ရှုရန်</center>**
->- ကတ္တားပုဒ်များကို အနက်ပေး , မနက်မာပြန်ရာ၌ ဧကဝုစ် ဖြစ်လျှင် ”တို့ , များ, တွေ” ဟု မပါစေရ၊ ဗဟုဝုစ် ဖြစ်လျှင် “တို့ , များ, တွေ” ဟု ပါစေရသည်၊ ကြိယာပုဒ်များကို အနက်ပေး မြန်မာပြန်ရာ၌လည်း ဧကဝုစ် ဖြစ်လျှင် “ကုန် , ကြ” ဟု မပါစေရ၊ ဗဟုဝုစ် ဖြစ်လျှင် ထို ၂ ခုတွင် တစ်ခုခု ပါစေရသည်။
->- **နိဿယနက်။**“အယံ-ဤသူသည်၊ ဘဝတိ-ဖြစ်၏။ ဣမေ-ဤသူတို့သည်၊ ဘဝန္တိ-ဖြစ်ကုန်၏” စသည်ဖြင့် “မယံ-ငါတို့သည်၊ ဘဝါမ-ဖြစ်ကုန်၏ ” တိုင်အောင် အနက်ပေးတတ်ပါစေ။
->- **မြန်မာပြန်။** အယံ ဘဝတိ-ဤသူ ဖြစ်၏=ဒီသူ ဖြစ်တယ်၊ ဣမေ ဘဝန္တိ-ဤသူတို့ ဖြစ်ကုန်၏=ဒီသူများ ဖြစ်ကြတယ်၊ မယံ-ဘဝါမ-ငါတို့ ဖြစ်ကုန်၏ = ငါတို့ ဖြစ်ကြတယ်။ [“ဒီသူဖြသ်တယ်” စသော စကားအသုံကို စကား ပြောရာ၌သာသုံပါ။]
->- **အမှာ။** ပါဠိကို အနက်ပေးသော အခါ, မြန်မာကို ပါဠိစီသော အခါတို့၌ နှုတ်ကလည်းမီမီ ဆိုပါစေ၊ ကျောက်သင်ပုန်းမှာလည်းသတ်ပုံ မှန်ကန်စွာနှင့် လက်ရေးလှလှ ရေးပါစေ။
+>- （ကတ္တားပုဒ်များကို主语词组） အနက်ပေး意思 , မြန်မာပြန်ရာ၌缅语翻译 ဧကဝုစ် ဖြစ်လျှင် ”တို့ , များ, တွေ” ဟု မပါစေရ不包含၊ ဗဟုဝုစ် ဖြစ်လျှင် “တို့ , များ, တွေ” ဟု ပါစေရသည်၊ ကြိယာပုဒ်များကို动词组 အနက်ပေး မြန်မာပြန်ရာ၌လည်း ဧကဝုစ် ဖြစ်လျှင် “ကုန် , ကြ” ဟု မပါစေရ၊ ဗဟုဝုစ် ဖြစ်လျှင် ထို ၂ ခုတွင် တစ်ခုခု ပါစေရသည်။
+>- **နိဿယနက်။**ayaṃ-这人၊ bhavati-是။ ime-这人们၊ bhavanti-是” စသည်ဖြင့်等等 “mayaṃ-我们၊ bhavāma-是 ” တိုင်အောင်直到 အနက်ပေးတတ်ပါစေ။
+>- **မြန်မာပြန်။** ayaṃ bhavati-ဤသူ ဖြစ်၏=是这人၊ ime bhavanti-ဤသူတို့ ဖြစ်ကုန်၏=ဒီသူများ ဖြစ်ကြတယ်是这人们၊ mayaṃ-bhavāma-ငါတို့ ဖြစ်ကုန်၏是我们 = ငါတို့ ဖြစ်ကြတယ်是我们။ [“ဒီသူဖြသ်တယ်” စသော စကားအသုံကို စကား ပြောရာ၌သာသုံပါ။]
+>- **အမှာ။** ပါဠိကို အနက်ပေးသော အခါ, မြန်မာကို ပါဠိစီသော အခါတို့၌ နှုတ်ကလည်းပီပီ发音准确 ဆိုပါစေ၊ ကျောက်သင်ပုန်းမှာလည်းသတ်ပုံ မှန်ကန်စွာနှင့် လက်ရေးလှလှ ရေးပါစေ။
 
-## <center>ကတ္တားနင့် ကြိယာ</center>
+## <center>ကတ္တားနှင့် ကြိယာ</center>
 **<center>အနက်ပေး, မြန်မာပြန်</center>**
 **<center>(ကျက်မှတ်ရန်)</center>**
 |  |  |  |  |  |  |
@@ -34,27 +34,27 @@
 
 |  |  |  |  |  |  |
 | - | - | - | - | - | - |
-|ဗုဒ္ဓေါ ဟောတိ။|ဗုဒ္ဓါ ဟောန္တိ။|တွံ ဟောသိ။|တုမှေ ဟောထ။|အဟံ ဟောမိ။|မယံ ဟောမ။|
-|ကညာ အတ္ထိ။|ကညာယော သန္တိ။|တွံ အသိ။|တုမှေ အတ္ထ။|အဟံ အမှိ။| မယံ အမှ။|
+|buddho hoti။|buddhā honti။|tvaṃ hosi|tumhe hotha．|ahaṃ homi။|mayaṃ homa။|
+|kaññā atthi။|kaññāyo santi။|tvaṃ asi|tumhe attha|ahaṃ  amhi။| mayaṃ  amha။|
 
 |  |  |  |
 | - | - | - |
-|သိဒ္ဓတ္ထော ဗုဒ္ဓေါ ဟောတိ။| ဒါကာ သာမဏေရာ ဟောန္တိ။|အဟံ ဘန္တေ (ဗုဒ္ဓရက္ခိတော နာမ) အမှိ။<br>[“ဗုဒ္ဓရက္ခိတော နာမ” အစား ကိုယ်နာမည် သွင်း၍ ဖြေပါ။]|
-|ဘန္တေ တုမှေ ကိံနာမာ အတ္ထ။|မယံ အာဝုသော သမဏာ နာမ အမှ။|
+|siddhattho buddho hoti။| dārakā sāmaṇerā honti။|ahaṃ bhante (buddharakkhito nāma) amhi။<br>[“buddharakkhito nāma” အစား ကိုယ်နာမည် သွင်း၍ ဖြေပါ။]|
+|bhante tumhe kiṃnāmā attha။|mayaṃ āvuso samaṇā nāma amha။|
 
 **<center>ကြည့်ရှုရန်</center>**
 >ဟောတိ- ဖြစ်၏-ဖြစ်သည်။ ဟောန္တိ-ဖြစ်ကုန်၏=ဖြစ်ကြသည်။ အတ္ထိ-ရှိ၏ ,ဖြစ်၏။ သန္တိ-ရှိကုန်၏, ဖြစ်ကုန်၏။ သိဒ္ဓတ္ထော-သိဒ္ဓတ္ထမင်းသား။
 
-## <center>ကတ္တားနင့် ကြိယာ</center>
+## <center>ပထမာဝိဘတ်အနက်</center>
 **<center>အနက်ပေး, မြန်မာပြန်</center>**
 
 |  |  |  |
 | - | - | - |
-|**၁။** ကော ဗုဒ္ဓေါ ဟောတိ။ |။သိဒ္ဓတ္ထော ဗုဒ္ဓေါ ဟောတိ။|
-|**၂။** ကော သယတိ။|။ဒါရကော သယတိ။
-|**၃။** ကာ ပစတိ။|။ဒါရိကာ ပစတိ။|
-|**၄။** ကေ ဂစ္ဆန္တိ။|။ပုရိသာ ဂစ္ဆန္တိ။
-|**၅။** ကာယော အာဂစ္ဆန္တိ။|။ကညာယော အာဂစ္ဆာန္တိ။
+|**၁။** ko buddho hoti။ |။siddhattho buddho hoti။|
+|**၂။** ko sayati။|။dārako sayati။
+|**၃။** kā pacati။|။dārikā pacati။|
+|**၄။** ke gacchanti။|။purisā gacchanti။
+|**၅။** kāyo āgacchanti။|။kaññāyo āgacchanti။
 
 **<center>ပါဠိစီရန် မြန်မာ</center>**
 |  |  |  |  |
@@ -63,7 +63,7 @@
 |(င) သင်တို့ သွားကြ၏။|(စ) ငါ လာသည်။|(ဆ) ကလေးသည် ကိုရင် ဖြစ်၏။|
 
 **<center>ကြည့်ရှုရန်</center>**
->ကော- အဘယ်သူ, သယ်သူ, ဘသူ, ဘယ်ဟာ။ ကေ-အဘယ်သူတို့သည်, ဘသူတွေ။ ကာ-အဘယ်သူမ။ ကာယော-အဘယ်သူမတို့သည်။ သယ-အိပ်။ ပစ-ချက်။ ဂစ္ဆ-သွား။ အာဂစ္ဆ-လာ(ကြွ)။<br>**သင်နည်း။** ပထမနေ့ ၌ ပါဠိ, အနက်, မြန်မာပြန်ကို ကျေကျေရအောင် ကျက်ပါစေ၊ ဒုတိယနေ့ကျမှ ပါဠိအစီခိုင်းပါ၊ ကတ္တားပုဒ်များကိုလည်း စာအုပ်ကြည့်၍ နာရုပ် စဉ်ပါစေ။
+>ko- အဘယ်သူ, သယ်သူ, ဘသူ, ဘယ်ဟာ။ ke-အဘယ်သူတို့သည်, ဘသူတွေ။ kā-အဘယ်သူမ။ kāyo-အဘယ်သူမတို့သည်။ aya-အိပ်။ paca-ချက်။ gaccha-သွား။ āgaccha-လာ(ကြွ)။<br>**သင်နည်း။** ပထမနေ့ ၌ ပါဠိ, အနက်, မြန်မာပြန်ကို ကျေကျေရအောင် ကျက်ပါစေ၊ ဒုတိယနေ့ကျမှ ပါဠိအစီခိုင်းပါ၊ ကတ္တားပုဒ်များကိုလည်း စာအုပ်ကြည့်၍ နာမ်ရုပ် စဉ်ပါစေ။
 
 
 **<center>နုနှင်တွဲသော ဝါကျများ</center>**
@@ -82,7 +82,7 @@
 |(ဂ) ကလေးများ ရှိကြသလား။ |။ဟုတ်ကဲ့ . . . ကလေးများရှိကြပါတယ်။|
 
 **<center>ကြည့်ရှုရန်</center>**
->အတ္ထိ နု-ရှိသလော (နိဿယ)=ရှိသလား (မြန်မာပြော)။
-ပစန္တိ နု-ချက်ကုန်သလော=ချက်ကြသလား။ [အနက်ပေးပုံနှင့်မြန်မာပြန်ပုံကို ခွဲခြား၍ ပြောပါ။]
-အာမ-မှန်ပါ, တင်ပါ, ဟုတ်ကဲ့, အင်း (အိမ်း)။<br>**သင်နည်း။** အမေးဝါကျ၌ ”အတ္ထိနု” ဟုဆိုသည်နှင့် တစ်ပြိုင်နက်မေးပုံ သရုပ်ပေါ်အောင် မေးထိုးလိုက်ပါစေ၊ အဖြေ ဝါကျကိုဆိုသောအခါ “အာမ” ဟု ဆိုသည်နှင့် တစ်ပြိုင်နက်ဦးခေါင်းကိုလည်း  ညိမ့်မိအောင် ညိမ့်ပါစေ။
+>အတ္ထိ နု-ရှိသလော (နိဿယ)=ရှိသလား (缅语)။
+pacanti nu煮吗?(复)=ချက်ကြသလား။ [အနက်ပေးပုံနှင့်မြန်မာပြန်ပုံကို ခွဲခြား၍ ပြောပါ意思和缅语分开读吧။]
+အာမ-မှန်ပါ, တင်ပါ, ဟုတ်ကဲ့, အင်း (အိမ်း)။<br>**သင်နည်း။** အမေးဝါကျ၌问句 ”အတ္ထိနု” ဟုဆိုသည်နှင့် တစ်ပြိုင်နက်မေးပုံ သရုပ်ပေါ်အောင် မေးထိုးလိုက်ပါစေ၊ အဖြေ ဝါကျကိုဆိုသောအခါ “အာမ” ဟု ဆိုသည်နှင့် တစ်ပြိုင်နက်ဦးခေါင်းကိုလည်း  ညိမ့်မိအောင် ညိမ့်ပါစေ။
 
