--- a/pathama/4.dutiya_vipatti.md
+++ b/pathama/4.dutiya_vipatti.md
@@ -1,58 +1,58 @@
 
 ## <center>ကတ္တားနှင့်  ကံ  ကြိယာ</center>
 
-**[ဆောင်]**<br> **၁။** ပြုလုပ်တတ်မူ, **ကတ္တား**ဟူ,မှတ်ယူ **“သည် , က”** အနက်ဆို။<br>**၂။** အပြုခံရ, **ကံ**‌ခေါ်ကြမတ်ကြ **“ကို, သို့”** အနက်ဆို။<br>**၃။** ပြုဖြင်း **ကြိယာ**, အနက်မှာ, မှတ်ပါ **“၏, သည်, တယ်” **ဟု ဆို။
+**[ဆောင်]**<br> **၁။** ပြုလုပ်တတ်မူ做, **ကတ္တား 主语**ဟူ,မှတ်ယူ认为，记 **“သည် , က”** အနက်ဆို说的含义။<br>**၂။** အပြုခံရ行动, **ကံ宾语**‌ ခေါ်ကြ叫，မှတ်ကြ **“ကို, သို့ 代词”** အနက်ဆို။<br>**၃။** ပြုခြင်း **ကြိယာ**, အနက်မှာ, မှတ်ပါ **“၏, သည်, တယ်” **ဟု ဆို။
 **<center>အနက်ပေး, မြန်မြပြန်</center>**
 |  |  |
 | - | - |
-|**၁။** ဒါရကော ပဂ္ဂံ ဂစ္ဆတိ။| **၂။** ဒါရိကာ ဘတ္တံ ပစတိ။|
-|**၃။** ပုရိသာ ဂါမံ အာဂစ္ဆန္တိ။ |**၄။** ဗုဒ္ဓေါ ဓမ္မံ ‌ဒေသေတိ။|
+|**၁။** dārako paggaṃ gacchati။| **၂။** dārikā bhattaṃ pacati။|
+|**၃။** purisā gāmaṃ āgacchanti။ |**၄။** buddho dhammaṃ ‌deseti။|
 
 **<center>အနက်ပေး, မြန်မြပြန်</center>**
 |  |  |
 | - | - |
-|(က) ကလေးတို့သည် လမ်းကို သွားကုန်၏။| (ခ) ကလေးမတို့သည် ထမင်းကို ချက်ကုန်၏။|
-|(ဂ) ယောကျ်ားသည် ရွာသို့ လာ၏။ |            (ဃ) ဘုရားတို့သည် ဝရားကို ယောတော်မူကုန်၏။|
+|(က) ကလေးတို့သည် လမ်းကို သွားကုန်၏ 小孩们走在路上။| (ခ) ကလေးမတို့သည် ထမင်းကို ချက်ကုန်၏ 小女孩们在做饭။|
+|(ဂ) ယောကျ်ားသည် ရွာသို့ လာ၏ 男人们来到村里။ |            (ဃ) ဘုရားတို့သည် တရားကို ယောတော်မူကုန်၏ 佛陀们在讲法။|
 
 **<center>ကြည့်ရှုရန်</center>**
 
->ပြုတတ် လုပ်တတ်သူကို **“ကတ္တား”** ဟုလည်းကောင်း, အပြုခံရသော (အသွားခံရသော) လမ်းစသည်ကို **“ကံ”** ဟုလည်းကောင်း, ပြုလုပ်ခြင်း(သွားခြင်း, ချက်ခြင်း) စသည်ကို **“ကြိယာ”** ဟုလည်းကောင်းခေါ်၏။<br>**ကတ္တား**ကို **“သညိ”**ဟုလည်းကောင်း,**“က”** ဟုလည်းကောင်း, ‌ရောက်နေသောကံ **“ကို”** ဟုလည်းကောင်း, မရောက်အပ်သေးသော ရှေးရှုကံကို **”သို့”** ဟုလည်းကောင်း, ကြိယာကို **“၏, သည်, တယ်”** ဟုလည်းကောင်း အနက်ပေးရ၏။ [ ဒေသေတိ-ဟောတိမူ၏၊ မဂ္ဂေါ-လမ်း၊ ဂါမော-ရွာ၊ သတ္တံ-ထမင်း။]
+>ပြုတတ် လုပ်တတ်သူကို 做 **“ကတ္တား”** ဟုလည်းကောင်း, အပြုခံရသော (အသွားခံရသော) လမ်းစသည်ကို **“ကံ”** ဟုလည်းကောင်း, ပြုလုပ်ခြင်း(သွားခြင်း走, ချက်ခြင်း煮) စသည်ကို等等 **“ကြိယာ 动词”** ဟုလည်းကောင်းခေါ်၏။<br>**ကတ္တား**ကို **“သည်”**ဟုလည်းကောင်း,**“က”** ဟုလည်းကောင်း, ‌ရောက်နေသောကံ来到的 ကို **“ကို”** ဟုလည်းကောင်း, မရောက်အပ်သေးသော不能来到的 ရှေးရှုကံကို 展望 **”သို့”** ဟုလည်းကောင်း, ကြိယာကို动词中 **“၏, သည်, တယ်”** ဟုလည်းကောင်း အနက်ပေးရ၏给的意思။ [ deseti-ဟောတိမူ၏၊ maggo-လမ်း 路၊ gāmo-ရွာ 村庄၊ sattaṃ-ထမင်း 米饭။]
 
-## <center>ဘကိံပါသော အမေးနှင့် အဖြေ</center>
-- **၁။** အာဝုသော သာမဏေရ! . . . ကော ဓမ္မံ ‌ဒေသေတိ။
-- **၂။** ဘန္တေ ဗုဒ္ဓရက္ခိတ! . . . ဗုဒ္ဓေါ ဓမ္မံ ဒေသေတိ။
-- **၃။** ဘော ပုရိသ! . . . ကေ မဂ္ဂံ ဂစ္ဆန္တိ။
-- **၄။** ဘော ဒါရက! . . . ကညာယော မဂ္ဂံ ဂစ္ဆန္တိ။
-- **၅။** ဘောတိ ကညေ! . . . ကာ ဘတ္တံ ပစတိ။
-- **၆။** ဘော ပုရိသ! . . . ဒါရိကာ ဘတ္တံ ပစတိ။
+## <center>ကိံပါသော အမေးနှင့် အဖြေ</center>
+- **၁။** āvuso sāmaṇera! . . . ko dhammaṃ ‌deseti။
+- **၂။** bhante buddharakkhita! . . . buddho dhammaṃ deseti．
+- **၃။** bho purisa! . . . ke maggaṃ gacchanti．
+- **၄။** bho dāraka! . . . kaññāyo maggaṃ gacchanti．
+- **၅။** bhoti kaññe! . . . kā bhattaṃ pacati．
+- **၆။** bho purisa! . . . dārikā bhattaṃ pacati．
 
 
 **<center>ပါဠိစီရန်</center>**
->**(က)** အို ယောကျ်ား . . . အဘက်သူတို့သည် တရား ဟောကုန်သနည်။<br>**(ခ)** အို သတို့သမီး . . . အဘယ်သူမတို့သည် ထမင်း ချက်ကုန်သနည်။<br>**(ဂ)** အို ကလေး . . . အဘယ်သူသည် ရွာသို့ လာသနည်း။<br>**(ဃ)** အို ယောကျ်ားတို့ . . . သင်တို့သည်  ရွာသို့  သွားကြကုန်၏။<br>**(င)** အို ကိုရင် . . . ငါသည် လမ်းကို သွား၏။
+>**(က)** အို ယောကျ်ား . . . အဘက်သူတို့သည် တရား ဟောကုန်သနည် 嘿男人 谁在开示။<br>**(ခ)** အို သတို့သမီး . . . အဘယ်သူမတို့သည် ထမင်း ချက်ကုန်သနည် 嘿 女人谁在煮饭 ။<br>**(ဂ)** အို ကလေး . . . အဘယ်သူသည် ရွာသို့ လာသနည်း 嘿 小孩谁在来村里了။<br>**(ဃ)** အို ယောကျ်ားတို့ . . . သင်တို့သည်  ရွာသို့  သွားကြကုန်၏ 嘿 男人们你们去村里။<br>**(င)** အို ကိုရင် . . . ငါသည် လမ်းကို သွား၏ 嘿 sāmaṇera 我去路上။
 
 
 **<center>ကြည့်ရှုရန်</center>**
->**သင်နည်း။** မြန်မြပြန်ရာ၌ ဖြစ်စေ, ပါဠိရာ၌ ဖြစ်စေ၊ ဤပြထားသောရေးပုံအတိုင်း တစ်ပုဒ်စီချဲ၍လည်ကောင်း, ၁-၂ (က)(ခ)စသည်ဖြင့် ဂဏန်းစဉ်တပ်၍လည်းကောင်း, ကျောက်သင်ပုန်းမှာ ရေးပါစေ။
+>**သင်နည်း။** မြန်မာပြန်ရာ၌ ဖြစ်စေ现代缅语, ပါဠိစီရာ၌ ဖြစ်စေ၊ ဤပြထားသောရေးပုံအတိုင်း တစ်ပုဒ်စီချဲ၍လည်ကောင်း每组, ၁-၂ (က)(ခ)စသည်ဖြင့်等等 ဂဏန်းစဉ်တပ်၍လည်းကောင်း 数字, ကျောက်သင်ပုန်းမှာ ရေးပါစေ။
 
 ## <center>ကတ္တားနှင့်  ကံ  ကြိယာ</center>
 
 |  |  |  |
 | - | - | - |
-|၁။ ဗုဒ္ဓေါ  န  ဘဝတိ။| ၂။ ဒါရကော  န  သယတိ။| ၃။ ဘတ္တံ  နတ္ထိ။|
-|၄။ မနုဿာ  န  သန္တိ။|၅။ တွံ  သာမဏေရော  န  အသိ။| ၆။ အဟံ  မနုဿော  န  အမှိ။|
-| ၇။ ဒါရကာ ဘတ္တံ  န  ပစတိ။|၈။ ပုရိသာ  မဂ္ဂံ  န  ဂစ္ဆန္တိ။ |၉။ သာမဏေရာ ဓမ္မံ  န  ဒေသေန္တိ။
+|၁။ buddho  na  bhavati။| ၂။ dārako  na  sayati။| ၃။bhattaṃ  natthi။|
+|၄။ manussā  na  santi ။|၅။ tvaṃ  sāmaṇero  na  asi ။| ၆။ ahaṃ  manusso  na  amhi။|
+| ၇။ dārakā bhattaṃ  na  pacati။|၈။ purisā  maggaṃ  na  gacchanti။ |၉။ sāmaṇerā dhammaṃ  na  desenti ။
 
 
 **<center>ပါဠိစိရန်</center>**
 
-- **(က)** သတို့သမီးသည် ဘုရား မဖြစ်။ 
-- **(ခ)** ကလေးသည် မရှိ။[ကလေး မရှိ။] 
-- **(ဂ)** ထမင်းတို့သည် မရှိကုန်။[ထမင်းတွေ မရှိကြ။]
-- **(ဃ)** သင်သည် လူ မဖြစ်။[လူ မဟုတ်။]
-- **(င)** ငါတို့သည် လူများ မဟုတ်ကြ။ 
-- **(စ)** သတို့သမီးတို့ ထမင်းကို မချက်ကုန်။
-- **(ဆ)** ငါတို့သည် ရွာသို့ မလာကုန်။ [ ငါတို့ ရွာ မလာကြ။]
+- **(က)** သတို့သမီးသည် ဘုရား မဖြစ်။ 女人不能成佛
+- **(ခ)** ကလေးသည် မရှိ။[ကလေး မရှိ။] 没有小孩
+- **(ဂ)** ထမင်းတို့သည် မရှိကုန်။[ထမင်းတွေ မရှိကြ။] 没有饭
+- **(ဃ)** သင်သည် လူ မဖြစ်။[လူ မဟုတ်။] 你不是人
+- **(င)** ငါတို့သည် လူများ မဟုတ်ကြ။ 我们不是人
+- **(စ)** သတို့သမီးတို့ ထမင်းကို မချက်ကုန်။ 女人们不煮饭
+- **(ဆ)** ငါတို့သည် ရွာသို့ မလာကုန်။ [ ငါတို့ ရွာ မလာကြ။] 我们不来村里
 
 
 **<center>ကြည့်ရှုရန်</center>**
-**န** သဒ္ဒါသည် မြန်မာလို **“မ”** နှင့် အနက်တူ၏၊ တားမြစ်ခြင်း (ပဋိသေဓ)=အနက်ဟောပုဒ်တည်း၊ ထို့ကြောင့် **“န+ဘဝတိ=မဖြစ်၊ န+သယတိ—မသွား”** ဤသို့စသည်ဖြင့် အနက်ပေးရသည်။
+**န** သဒ္ဒါသည် မြန်မာလို缅甸语法中 **“မ”** နှင့် အနက်တူ၏၊ တားမြစ်ခြင်း 阻挡 (ပဋိသေဓ)=အနက်ဟောပုဒ်တည်း၊ ထို့ကြောင့် **“န+ဘဝတိ=မဖြစ်၊ န+သယတိ—မအိပ်၊န+ဂစ္ဆတိ-မသွား”** ဤသို့စသည်ဖြင့် 等等这些 အနက်ပေးရသည် 给的含义။
