--- a/pathama/5.tatiya_vibhatti.md
+++ b/pathama/5.tatiya_vibhatti.md
@@ -1,55 +1,55 @@
 ## <center>ဖြင့်-ဟု ပေးရသော တတိယာဝိဘတ်</center>
-- **၁။** ဒါရကော ပါဒေန ဂါမံ ဂစ္ဆန္တိ။ 
-- **၂။** ဒါရိကာယော သကဋေန နဂရံ ဂစ္ဆန္တိ။
-- **၃။** ပုရိသော အဂ္ဂိရထေန ရန်ကုန်နဂရံ ဂစ္ဆတိ။
-- **၄။** မနုဿာ နာဝါယ မန္တလေးနဂရံ အာစ္ဆန္တိ။
-- **၅။** သာမဏေရော မန္တနာဝါယ စစ်ကိုင်းပဗ္ဗတံ ဂစ္ဆတိ။ 
-- **၆။** အာဂစ္ဆသိနု တွံ အာဝုသော နဂရံ အဂ္ဂိရထန။ 
-- **၇။** နာ.ဟံ ဘန္တေ အဂ္ဂိရထေန နဂရံ အာဂစ္ဆာမိ ၊ ဝါယုယာနေန အာဂစ္ဆာမိ
+- **၁။** dārako pādena gāmaṃ gacchanti ။ 
+- **၂။** dārikāyo sakaṭena nagaraṃ gacchanti ။
+- **၃။** puriso aggirathena 仰光nagaraṃ gacchati ။
+- **၄။**  manussā nāvāya 曼德勒”nagaraṃ ācchanti။
+- **၅။** sāmaṇero yantanāvāya 实皆”pabbataṃ gacchati ။ 
+- **၆။** āgacchasinu thaṃ āvuso nagaraṃ aggirathana ။ 
+- **၇။** nā.haṃ bhante aggirathena nagaraṃ āgacchāmi ， vāyuyānena āgacchāmi ။ 
 
 **<center>ပါဠိစီရန်</center>**
-- **(က)** သင်သည် ဘာဖြင့် ရွာသို့ လာသနည်း။ 
-- **(ခ)** ငါသည် မီးရထားဖြင့် မြို့သို့ လာ၏။
-- **(ဂ)** သင်သည် ရွာသို့ ခြေဖြင့် (ခြေလျင်) လာသလော။ 
-- **(ဃ)** တပည့်တော်သည် မြို့သို့ ခြေလျင် မလာပါ
+- **(က)** သင်သည် ဘာဖြင့် ရွာသို့ လာသနည်း။ 你为什么要来村里
+- **(ခ)** ငါသည် မီးရထားဖြင့် မြို့သို့ လာ၏။ 我从市里坐火车来的
+- **(ဂ)** သင်သည် ရွာသို့ ခြေဖြင့် (ခြေလျင်) လာသလော။ 你用教走来村里的吗
+- **(ဃ)** တပည့်တော်သည် မြို့သို့ ခြေလျင် မလာပါ 我(学生) 是不是用脚走来城市的
 
 
 **<center>ကြည့်ရှုရန်</center>**
->ပါဒေါ-ခြေ။ သကဋံ-လှည်း(လှဲ)။ နဂရံ-မြို့။ ။ပဗ္ဗတော-တောင်။ ။ရထော-ရထား။ ။အဂ္ဂိရထော။ ။အဿရထော-မြင်းရထား။ ။ဝါယုယာနံ=အာကာသယာနံ-လေယာဉ်ပျံ။ ။နာဝါ-လှေ။ ။ယန္တ နာဝါ-စက်လှေ(သင်္ဘော)။ ။အဂ္ဂိနာဝါ-မီးသင်္ဘော။ ။ဤပုဒ်များကို ရုပ်စဉ်ပ်စေ။
+>pādo-脚 sakaṭaṃ-车(牛车)။ nagaraṃ-城市 ။pabbato-山 ။ratho-车 ။aggiratho-火车 ။assaratho-马车 ။vāyuyānaṃ=ākāsayānaṃ-飞机 ။nāvā-船 ။yanta nāvā-游轮(သင်္ဘော)။ ။aggināvā-မီးသင်္ဘော။ ။ဤပုဒ်များကို ရုပ်စဉ်ပ်စေ။
 
 ## <center>ကြောင့်-ဟု ပေးရသော တတိယာဝိဘတ်</center>
-- **၁။** တွံ အာဝုသော ကေန ဝသသိ။ 
-- **၂။** အယံ ဘန္တေ အန္နေန ဝသမိ။ 
-- **၃။** တွံ အာဝုသော ကေန ဘောဂံ လဘသိ။
-- **၄။** အဟံ ဘန္တေ ဒါနေန ဘောဂံ လဘာမိ။ 
-- **၅။** မနုဿာအာဝုသော ကေန သုခံ လဘန္တိ။ 
-- **၆။** မနုသာ ဘန္တေ သီလေန သုခံ လဘာန္တိ။
-- **၇။** သတ္တာ အာဂုသော ကေန နိဗ္ဗာနံ ပါပုဏန္တိ။ 
-- **၈။** သတ္တာ ဘန္တေ ဘာဝနာယ နိဗ္ဗာနံ ပါပုဏန္တိ။
+- **၁။** tvaṃ āvuso kena vasasi။ 
+- **၂။** ayaṃ bhante annena vasami။ 
+- **၃။** tvaṃ āvuso kena bhogaṃ labhasi။
+- **၄။** ahaṃ bhante dānena bhogaṃ labhāmi။ 
+- **၅။** manussāāvuso kena sukhaṃ labhanti။ 
+- **၆။** manussā bhante sīlena sukhaṃ labhānti။
+- **၇။** sattā āguso kena nibbānaṃ pāpuṇanti။ 
+- **၈။** sattā bhante bhāvanāya nibbānaṃ pāpuṇanti။
 
 **<center>ပါဠိစီရန်</center>**
-- **(က)** ငါ့ရှင် . . .  သင်သည် ဘာ့ကြောင့် ထမင်း ချက်သနည်း။ 
-- **(ခ)** တပည့်တော်သည် အစာကြောင့် နေသည် မဟုတ်ပါ။
-- **(ဂ)** သတ္တာတို့သည် ဒါနကြောင့် ဘာကို ရကြသနည်း။
+- **(က)** ငါ့ရှင် . . .  သင်သည် ဘာ့ကြောင့် ထမင်း ချက်သနည်း။ 贤友 你为什么做饭
+- **(ခ)** တပည့်တော်သည် အစာကြောင့် နေသည် မဟုတ်ပါ။ 我 不是因食物而住
+- **(ဂ)** သတ္တာတို့သည် ဒါနကြောင့် ဘာကို ရကြသနည်း။ 友情们布施得到了什么
 
 **<center>ကြည့်ရှုရန်</center>**
->ဝသ-နေ ။လဘ_ရ။ ။ပါပုဏ-ရောက်။ ။အန္နံ-အစာ။ ။မနုဿော, မာနုဿော, နရော-လူ။ ။သတ္တော-သတ္တဝါ။ ။ဒါနံ-ဒါန(အလှူပေးမှု)။ ။သီလံ-သီလ(ကိုယ် နှုတ် စိတ်ကိုတိုးလာအောင် ကမ္မဋ္ဌာန်း အားထုတ်မှု)။ ။ကိံ-အဘယ်ကို(ဘာကို)။ ။ဘောဂေါ-စည်းစိမ်။
+>vasa-住 ။ labha-得到 ။ ။ pāpuṇa-到။ ။ annaṃ-食物။ ။ manusso, mānuso, naro-人 ။ ။satto-有情။ ။dānaṃ-布施(供养,给予)။ ။sīlaṃ-戒(ကိုယ် နှုတ် စိတ်ကိုတိုးလာအောင် ကမ္မဋ္ဌာန်း အားထုတ်မှု)။ ။kiṃ-什么(ဘာကို)။ ။bhogo-物品
 
 ## <center>နှင့်-ဟု ပေးရသော တတိယာဝိဘတ်</center>
-- **၁။** တွံ ကေန သဟ ဝိဟရသိ။ 
-- **၂။** အဟံ ဗုဒ္ဓေါန သဟ ဝိဟရာမိ။ 
-- **၃။** ဗုဒ္ဓေါ ကေန သဒ္ဓိံ နဂရံ ဂစ္ဆတိ 
-- **၄။** ဗုဒ္ဓေါ သံဃေန သဒ္ဓိံ နဂရံ ဂစ္ဆတိ။ 
-- **၅။** ပဏ္ဍိတာ ကေဟိ ဝိနာ ဝိဟာရံ အာဂစ္ဆန္တိ။ 
-- **၆။** ပဏ္ဍိတာ ဗာလေဟိ ဝိနာ ဝိဟာရံ အာဂစ္ဆန္တိ။
+- **၁။** tvaṃ kena saha viharasi။ 
+- **၂။** ahaṃ buddhona saha viharāmi။ 
+- **၃။** buddho kena saddhiṃ nagaraṃ gacchati။
+- **၄။** buddho saṅghena saddhiṃ nagaraṃ gacchati။ 
+- **၅။** paṇḍitā kehi vinā vihāraṃ āgacchanti။ 
+- **၆။** paṇḍitā bālehi vinā vihāraṃ āgacchanti။
 
 **<center>ပါဠိစီရန်</center>**
-- (**က**) ငါသည် သင်နှင့် အတူ (တကွ) နေ၏။ 
-- (**ခ**) သင်သည် ပါနှင့် အတူ မနေ။ 
-- (**ဂ**) လူလိမ္မာသည် လူမိုက်နှင့် အတူ နေသလော
-- (**ဃ**) လူမိုက်သည် လူလိမ္မာနှင့် ခွဲ၍ နေ၏။
-- (**င**) ဘုရားသည် သံဃာနှင့် အတူ ကြွလာတော်မူ၏။ 
-- (**စ**) သံဃာသည် ဘုရားနှင့် ခွဲ၍ မလာ။
+- (**က**) ငါသည် သင်နှင့် အတူ (တကွ) နေ၏။ 我和你一起住
+- (**ခ**) သင်သည် ငါနှင့် အတူ မနေ။ 你不和我一起住
+- (**ဂ**) လူလိမ္မာသည် လူမိုက်နှင့် အတူ နေသလော။ 智者的人和坏人一起住吗？
+- (**ဃ**) လူမိုက်သည် လူလိမ္မာနှင့် ခွဲ၍ နေ၏။ 智者的人和分开住
+- (**င**) ဘုရားသည် သံဃာနှင့် အတူ ကြွလာတော်မူ၏။ 佛陀和僧团们一起走来
+- (**စ**) သံဃာသည် ဘုရားနှင့် ခွဲ၍ မလာ။ 僧团和佛陀分不来
 
 **<center>ကြည့်ရှုရန်</center>**
->ဝိဟရ-နေ ။ သဟ, သဒ္ဓိံ-အတူ(တကွာ)။ ။ဝိနာ-ခွဲ၍။ ။(ကင်း၍)။ ။ပဏ္ဍိတော-လူလိမ္မာ (ပညာရှိ)။ ။ဗာလော-လူမိုက်(လူဆိုး, လူဖျင်း, လူန, လူအ, လူထိုင်း)။ ။တယာ-သင်နှင့်။ ။မယာ-ငါနှင့်။
+>vihara-住 ။ saha, saddhiṃ-一起(同时)။ ။ vinā-分来 ။(避开)။ ။ paṇḍito-听话的(智者)။ ။ bālo-坏人(愚人)။ ။ tayā-你 ။ ။ mayā-我 ။
